@@ -1,4 +1,5 @@
 HEAD
+	+ Correctly escape DNs and search filters or external ACL helper script
 	+ Fix group based filter access rules in external AD mode, retrieving
 	  members of nested groups
 	+ Improve squid group membership helper script
